@@ -1,4 +1,4 @@
-.TH HASHDEEP "1" "v3.9.1 \- 31 May 2011" "AFOSI" "United States Air Force"
+.TH HASHDEEP "1" "v4.0 \- RBF DATE" "AFOSI" "United States Air Force"
 
 .SH NAME
 hashdeep \- Compute, compare, or audit multiple message digests
@@ -8,8 +8,7 @@ hashdeep \- Compute, compare, or audit multiple message digests
 -V | -h
 .br
 .B hashdeep
-[-c <alg1>[,<alg2>]] [-k <file>] [-i <size>] [\-f <file>] 
-[\-o <fbcplsd>] [-amxwMXrespblvv] [\-F<bum>] [\-jnn] [\fBFILES\fR]
+[-c <alg1>[,<alg2>]] [-k <file>] [-i <size>] [\-o <fbcplsd>] [-amxwMXrespblvv] [\fBFILES\fR]
 
 
 .SH DESCRIPTION
@@ -98,16 +97,6 @@ This flag may not be used in conjunction with the \-m, \-M, or \-a flags.
 See the section "UNICODE SUPPORT" below.
 
 .TP
-\fB\-f\fR <file>
-Takes a list of files to be hashed from the specified file. Each
-line is assumed to be a filename. This flag can only be used once
-per invocation. If it's used a second time, the second instance will
-clobber the first. 
-.br
-Note that you can still use other flags, such as the \-m or \-x modes,
-and submit additional FILES on the command line.
-
-.TP
 \fB\-w \fR
 When used with positive matching modes (\-m,\-M) displays the filename
 of the known hash that matched the input file. 
@@ -193,35 +182,6 @@ Enables verbose mode. Use again to make the program more verbose.
 This mostly changes the behvaior of the audit mode, \-a.
 
 .TP
-\fB-jnn\fR
-Controls multi-threading. By default the program will create one
-producer thread to scna the file system and one hashing thread per CPU
-core. Multi-threading causes output filenames to be in
-non-deterministic order, as files that take longer to hash will be
-delayed while they are hashed. If a deterministic order is required,
-specify \fB-j0\fR to disable multi-threading
-
-.TP
-\fB-d\fR
-Output in Digital Forensics XML (DFXML) format.
-
-.TP
-\fB-u\fR
-Quote Unicode output. For example, the snowman is shown as
-\fBU+C426\fR.
-
-.TP
-\fB-F<bum>\fR
-Specifies the input mode that is used to read files. The default is
-\fB-Fb\fR (buffered I/O) which reads files with fopen(). Specifying
-\fB-Fu\fR will use unbuffered I/O and read the file with
-open(). Specifying \fB-Fm\fR will use memory-mapped I/O which will be
-faster on some platforms, but which (currently) will not work with
-files that produce I/O errors.
-
-
-
-.TP
 \fB\-h\fR
 Show a help screen and exit.
 
@@ -232,28 +192,14 @@ Show the version number and exit.
 
 
 .SH UNICODE SUPPORT
-As of version 3.0 the program supports Unicode characters in filenames
-on Microsoft Windows systems for filenames specified on the command
-line with globbing (e.g. *), for files specified with the
-\fB-f\fR of files to hash, and for files read from directories using
-the \fB-r\fR option.
-
-By default all program input and output
-should be in UTF-8.  The program automatically converts this to UTF-16
-for opening files). 
-
-On Unix/Linux/MacOS, you should use a terminal emulator that supports
-UTF-8 and UTF-8 characters in filenames will be properly displayed.
-
-On Windows, please note that the onsole is not capiable of displaying Unicode
-characters. You must either redirect output to a file and open the
-file with Wordpad (which can display Unicode), or you must specify the
-\fB-u\fR option to quote Unicode using standard \fBU+XXXX\fR notation.
-
-Currently the file name of a file containing known hashes may not be
-specified as a unicode filename, but you can specify the name using
-tab completition or an asterisk (e.g. md5deep -m *.txt where there is
-only one file with a .txt extension).
+As of version 2.0 the program can process input files with 
+Unicode characters in their filenames on Windows systems.
+In the program's output, however, each Unicode character
+is represented with a question mark (?). 
+Note that Unicode characters are \fBnot\fR supported in the files
+containing known hashes. You can specify a file of known hashes that has
+Unicode characters in its name by using tab completition or an asterisk
+(e.g. hashdeep -mk *.txt where there is only one file with a .txt extension).
 
 .SH RETURN VALUE
 Returns zero on success, one on error. 
