@@ -31,8 +31,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i686-apple-darwin11.0.0
-host_triplet = i686-apple-darwin11.0.0
+build_triplet = i686-apple-darwin10.8.0
+host_triplet = i686-apple-darwin10.8.0
 subdir = testfiles
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -47,12 +47,12 @@ CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run aclocal-1.11
-AMTAR = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run tar
-AUTOCONF = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run autoconf
-AUTOHEADER = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run autoheader
-AUTOMAKE = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run automake-1.11
-AWK = awk
+ACLOCAL = ${SHELL} /Users/jessek/research/md5deep/svn/branches/version4/missing --run aclocal-1.11
+AMTAR = ${SHELL} /Users/jessek/research/md5deep/svn/branches/version4/missing --run tar
+AUTOCONF = ${SHELL} /Users/jessek/research/md5deep/svn/branches/version4/missing --run autoconf
+AUTOHEADER = ${SHELL} /Users/jessek/research/md5deep/svn/branches/version4/missing --run autoheader
+AUTOMAKE = ${SHELL} /Users/jessek/research/md5deep/svn/branches/version4/missing --run automake-1.11
+AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -I/opt/local/include -I/usr/local/include  -D_FORTIFY_SOURCE=2 -Wall -g -D_THREAD_SAFE -pthread
@@ -70,7 +70,7 @@ ECHO_T =
 EGREP = /usr/bin/grep -E
 EXEEXT = 
 GREP = /usr/bin/grep
-INSTALL = /usr/bin/install -c
+INSTALL = /opt/local/bin/ginstall -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
@@ -79,8 +79,8 @@ LDFLAGS = -L/opt/local/lib -L/usr/local/lib
 LIBOBJS =  ${LIBOBJDIR}lstat$U.o
 LIBS = -pthread 
 LTLIBOBJS =  ${LIBOBJDIR}lstat$U.lo
-MAKEINFO = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run makeinfo
-MKDIR_P = .././install-sh -c -d
+MAKEINFO = ${SHELL} /Users/jessek/research/md5deep/svn/branches/version4/missing --run makeinfo
+MKDIR_P = /opt/local/bin/gmkdir -p
 OBJEXT = o
 PACKAGE = md5deep
 PACKAGE_BUGREPORT = research@jessekornblum.com
@@ -97,10 +97,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = 4.0.0_alpha_003
-abs_builddir = /Users/simsong/md5deep/branches/version4/testfiles
-abs_srcdir = /Users/simsong/md5deep/branches/version4/testfiles
-abs_top_builddir = /Users/simsong/md5deep/branches/version4
-abs_top_srcdir = /Users/simsong/md5deep/branches/version4
+abs_builddir = /Users/jessek/research/md5deep/svn/branches/version4/testfiles
+abs_srcdir = /Users/jessek/research/md5deep/svn/branches/version4/testfiles
+abs_top_builddir = /Users/jessek/research/md5deep/svn/branches/version4
+abs_top_srcdir = /Users/jessek/research/md5deep/svn/branches/version4
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -110,10 +110,10 @@ am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 ax_pthread_config = 
 bindir = ${exec_prefix}/bin
-build = i686-apple-darwin11.0.0
+build = i686-apple-darwin10.8.0
 build_alias = 
 build_cpu = i686
-build_os = darwin11.0.0
+build_os = darwin10.8.0
 build_vendor = apple
 builddir = .
 datadir = ${datarootdir}
@@ -121,24 +121,24 @@ datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = i686-apple-darwin11.0.0
+host = i686-apple-darwin10.8.0
 host_alias = 
 host_cpu = i686
-host_os = darwin11.0.0
+host_os = darwin10.8.0
 host_vendor = apple
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Users/simsong/md5deep/branches/version4/install-sh
+install_sh = ${SHELL} /Users/jessek/research/md5deep/svn/branches/version4/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
 mandir = ${datarootdir}/man
-mkdir_p = $(top_builddir)/./install-sh -c -d
+mkdir_p = /opt/local/bin/gmkdir -p
 oldincludedir = /usr/include
 pdfdir = ${docdir}
-prefix = /usr/local
+prefix = /Users/jessek/tmp
 program_transform_name = s,x,x,
 psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
